--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
             border-radius: 5px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
         }
+        .hero-image {
+            width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+            border-radius: 8px;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -116,7 +122,7 @@
         </div>
 
         <div class="diagram-section">
-            <h2>Diagrama de Arquitetura</h2>
+            <h2>Diagramas de Arquitetura</h2>
             <img src="docs/architecture_diagram.png" alt="Diagrama de Arquitetura do Sistema Bancário">
             <p><i>Visão geral da arquitetura de microserviços.</i></p>
         </div>
@@ -133,3 +139,4 @@
     </div>
 </body>
 </html>
+
